kube.yaml
---
apiVersion: v1
kind: Namespace
metadata:
 name: mirror-redirect  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-redirector
  namespace: mirror-redirect
  labels:
    app: mirror-redirector
spec:
  replicas: 2
  selector:
    matchLabels:
     app: mirror-redirector
  template:
    metadata:
      labels:
        app: mirror-redirector
    spec:
      containers:
      - name: mirror-redirector
        image: quay.io/mocaccino/mirror-redirector
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/redirector
          readOnly: true
          name: config
      volumes:
      - name: config
        configMap:
          name: redirector-config
          items:
            - key: redirect.yaml
              path: redirect.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mirror-redirector
  namespace: mirror-redirect
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mirror-redirector
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mirror-redirector
  namespace: mirror-redirect
spec:
  rules:
  - host: 'my.host.org'
    http:
      paths:
      - backend:
          serviceName: mirror-redirector
          servicePort: 80
        path: /
  tls:
  - hosts:
    - 'my.host.org'
    secretName: ingress-tls
